--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			</roles>
 		</developer>
 	</developers>
+	<contributors>
+		<contributor>
+			<name>Lional Rajappa</name>
+		</contributor>
+	</contributors>
 
 	<mailingLists>
 		<mailingList>
@@ -129,6 +134,14 @@
 		</dependency>
 
 		<!-- BigDataViewer dependencies -->
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer-vistools</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>spim_data</artifactId>
