--- a/pom.xml
+++ b/pom.xml
@@ -75,24 +75,31 @@
 
 	<properties>
 		<package-name>de.mpg.biochem.mars.fx</package-name>
-    <license.copyrightOwners>Karl Duderstadt</license.copyrightOwners>
-    <license.licenseName>bsd_2</license.licenseName>
-    <license.excludes>**/resources/**</license.excludes>
+    	<license.copyrightOwners>Karl Duderstadt</license.copyrightOwners>
+    	<license.licenseName>bsd_2</license.licenseName>
+    	<license.excludes>**/resources/**</license.excludes>
 
-    <!-- NB: Deploy releases to the SciJava Maven repository. -->
-    <releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
+    	<!-- NB: Deploy releases to the SciJava Maven repository. -->
+    	<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-    <mars-core.version>1.0.0-beta-44</mars-core.version>
+    	<mars-core.version>1.0.0-beta-44</mars-core.version>
+		<mars-n5.version>0.1</mars-n5.version>
 
 		<n5-ij.version>3.2.3</n5-ij.version>
 		<n5-imglib2.version>5.0.0</n5-imglib2.version>
 	</properties>
 
 	<dependencies>
+		<!-- Mars dependencies -->
 		<dependency>
 			<groupId>de.mpg.biochem</groupId>
 			<artifactId>mars-core</artifactId>
 			<version>${mars-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.biochem</groupId>
+			<artifactId>mars-n5</artifactId>
+			<version>${mars-n5.version}</version>
 		</dependency>
 
 		<!-- ImageJ dependencies -->
