--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>de.mpg.biochem</groupId>
 	<artifactId>mars-kymograph</artifactId>
-	<version>0.1.3-SNAPSHOT</version>
+	<version>0.1.3</version>
 
 	<name>mars-kymograph</name>
 	<description>Mars kymograph builder.</description>
@@ -61,7 +61,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/duderstadt-lab/mars-kymograph</connection>
 		<developerConnection>scm:git:git@github.com:duderstadt-lab/mars-kymograph</developerConnection>
-		<tag>HEAD</tag>
+		<tag>mars-kymograph-0.1.3</tag>
 		<url>https://github.com/duderstadt-lab/mars-kymograph</url>
 	</scm>
 	<issueManagement>
