--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 
     	<mars-core.version>1.0.0</mars-core.version>
 		<mars-minio.version>0.6</mars-minio.version>
+		<mars-transverseflow.version>0.2.0</mars-transverseflow.version>
 	</properties>
 
 	<dependencies>
@@ -97,6 +98,11 @@
 			<groupId>de.mpg.biochem</groupId>
 			<artifactId>mars-minio</artifactId>
 			<version>${mars-minio.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.biochem</groupId>
+			<artifactId>mars-transverseflow</artifactId>
+			<version>${mars-transverseflow.version}</version>
 		</dependency>
 
 		<!-- ImageJ dependencies -->
